<resources>
    <string name="app_name">RecyclerView</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="noPelicula">No hay ninguna película</string>
    <string name="titulo_peli">Título de la película</string>
    <string name="genero_peli">Género de la película</string>
    <string name="fecha_peli">Fecha de la película</string>
    <string name="action_insertar">Insertar</string>
    <string name="action_modificar">Modificar</string>
    <string name="action_borrar">Borrar</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sing_in">Sing in</string>
    <string name="log_in">Log in</string>
    <string name="guardar">Guardar</string>
</resources>